# packt-agentic-devops

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md  components.yaml  copy-paste-commands.md  versions.lock.md
.claude/: settings.json  settings.local.json.tmp.2199436.45c2c6554b1b
charts-vendor/: agentgateway-crds-v1.3.0.tgz  agentgateway-v1.3.0.tgz  backstage-2.8.2.tgz  kagent-0.9.9.tgz  kagent-crds-0.9.9.tgz  kgateway-crds-v2.3.4.tgz  kgateway-v2.3.4.tgz  kserve-crd-v0.19.0.tgz  kserve-resources-v0.19.0.tgz  loki-17.4.7.tgz  openbao-0.28.4.tgz  opentelemetry-operator-0.115.0.tgz  tempo-2.2.3.tgz
claude-ai-context/: README.md
collateral/: agenda.md  promo-snippets.md  promo-video-script.md
defects/: July-23rd-Defects-run.md
docs/: ROADMAP.md  alternative-paths.md  architecture.md  build-spec.md  catch-up-guide.md  deadlines.md  decisions.md  packt-event-listing.md  prerequisites.md  related-content.md  research-findings-june-2026.md  vtt-enhancements-backlog.md  workshop-build-spec.md  workshop-overview.md
prompts/: prompt-library.md
scripts/: check_components.py  mirror-images.sh  preflight.sh  promote-spare.sh  ship-audit-to-loki.sh  smoke-test.sh  test_check_components.py  vendor-charts.sh
scripts/provision/distribution/: .gitignore  .railwayignore  RAILWAY-OPS.md  README.md  app.py  pool.csv.example  pool.db.bak-20260722T123209Z  pyproject.toml  railway.json  test_app.py
scripts/provision/distribution/templates/: _base.html  admin.html  browser.html  browser_success.html  exhausted.html  index.html  success.html
solution/: README.md
(+229 files in other folders)
